styling menu fixed overlap

--- a/css/style.scss
+++ b/css/style.scss
@@ -279,30 +279,36 @@ nav {
     display: flex;
     flex-direction: column;
     padding: 50px 0;
-        >div {
+        div {
             width: 100%;
             border-bottom: 1px solid #fff;
             padding: 20px 0;
 
-            .menuhead {
-            border-bottom: #fff 2px solid;
-            display: flex;
-            justify-content: space-between;
-            color: #fff;
-            align-items: center;
+            h3 {
+                font-size: $font_small;
+                font-weight: 900;
+                font-style: italic;
+                
             }
-                h2 {
-                    text-align: left;
+                } 
+
+                    .menuhead {
+                    border-bottom: #fff 2px solid;
+                    display: flex;
+                    justify-content: space-between;
                     color: #fff;
-                    font-size: $font_large;
-                    font-family: 'nothing you could do', cursive;
+                    font-style: italic;
+                    align-items: center;
                     }
-                    h3 {
-                        font-size: $font_small;
-                        font-weight: 900;
+                    h2 {
+                        text-align: left;
+                        color: #fff;
+                        font-size: $font_large;
+                        font-family: 'nothing you could do', cursive;
                         }
+                    
             }
-        }
+        
 .menuitems {
     text-align: left;
     background-color: rgb(43, 45, 47);
@@ -315,27 +321,9 @@ nav {
         margin-top: 20px;
         margin-bottom: 12px;
     }
-        .menuhead {
-        border-bottom: #fff 2px solid;
-        // box-sizing: border-box;
-        text-align: right;
-        display: grid;
-        color: #fff;
-        padding: 1em 1em;
-        margin: 2rem;
-        // > div {border-bottom: #fff 1px solid;}
+        }
+        // add hover effect after media query
 
-            >h2 {
-                text-align: left;
-                color: #fff;
-            }
-
-                >p {
-                    font-style: italic;
-                    border-top: #fff;
-                }
-        }// add hover effect after media query
-}
 
 footer {
         border: 2px solid black;
